<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Selection">


    <ImageView
        android:id="@+id/quizBoxImageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/image" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="281dp"
        android:layout_height="72dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/text_name"
        android:fontFamily="@font/aclonica"
        android:text="@string/qu"
        android:textColor="@color/purple_700"
        android:textSize="55sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/quizBoxImageView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="382dp"
        android:layout_height="63dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/text_name"
        android:fontFamily="@font/aclonica"
        android:text="@string/select_a_programming_language"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="400dp"
        android:text="@string/c"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="300dp"
        android:text="@string/java"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <CheckBox
    android:id="@+id/checkBox3"
    android:layout_width="160dp"
    android:layout_height="65dp"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="200dp"
    android:layout_marginBottom="200dp"
    android:text="@string/python"
    android:textSize="30sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="64dp"
        android:text="@string/proceed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>