<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity3">


    <ImageView
        android:id="@+id/pythonImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/image" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_00_30"
        android:textAlignment="textEnd"
        android:textColor="@color/purple_700"
        android:textSize="60sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toEndOf="@+id/pythonTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

    <TextView
        android:id="@+id/pythonTextView"
        android:layout_width="292dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/text_name"
        android:text="@string/p1"
        android:textColor="@color/purple_700"
        android:textSize="60sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pythonImageView"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/pythonImageView"
        app:layout_constraintEnd_toEndOf="@+id/pythonImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pythonTextView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/name1"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/linearLayout1" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:padding="16dp"
            android:text="@string/question"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/textView1" />



        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/textView2">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/option_1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="16dp"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/option_2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="16dp"/>

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/option_3"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="16dp"/>

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/option_4"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="16dp"/>
        </RadioGroup>





    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="64dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4FF81"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/pythonImageView"
        app:layout_constraintEnd_toEndOf="@+id/pythonImageView"
        app:layout_constraintLeft_toLeftOf="@id/pythonImageView"
        app:layout_constraintTop_toBottomOf="@id/nextButton"
        tools:visibility="invisible" />


</androidx.constraintlayout.widget.ConstraintLayout>