<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/quizBoxImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00D4CD"
        android:contentDescription="@string/image_for_app"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/quiz"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/quizBoxTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="200dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/quiz"
        android:textColor="#30334E"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="@id/quizBoxImageView"
        app:layout_constraintEnd_toEndOf="@id/quizBoxImageView"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="@id/quizBoxImageView"
        app:layout_constraintTop_toTopOf="@id/quizBoxImageView"
        app:layout_constraintVertical_bias="0.164" />


    <TextView
        android:id="@+id/quizBoxTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="180dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/box"
        android:textColor="@color/purple_700"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="@id/quizBoxImageView"
        app:layout_constraintEnd_toEndOf="@id/quizBoxImageView"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="@id/quizBoxImageView"
        app:layout_constraintTop_toTopOf="@id/quizBoxImageView"
        app:layout_constraintVertical_bias="0.164" />

    <Button
        android:id="@+id/quizBoxButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="monospace"
        android:text="@string/start_quiz"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/quizBoxImageView"
        app:layout_constraintEnd_toEndOf="@id/quizBoxImageView"
        app:layout_constraintStart_toStartOf="@id/quizBoxImageView" />

    <TextView
        android:id="@+id/quizBoxTextView3"
        android:layout_width="409dp"
        android:layout_height="39dp"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="10dp"
        android:background="#CCFF90"
        android:backgroundTint="#B6DF85"
        android:fontFamily="@font/aclonica"
        android:gravity="fill"
        android:text="@string/are_you_ready_to_take_a_quiz"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/quizBoxImageView"
        app:layout_constraintEnd_toEndOf="@id/quizBoxImageView"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@id/quizBoxImageView"
        app:layout_constraintTop_toTopOf="@id/quizBoxImageView"
        app:layout_constraintVertical_bias="0.152" />


</androidx.constraintlayout.widget.ConstraintLayout>